--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,26 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.deadmandungeons</groupId>
     <artifactId>audio-connect</artifactId>
-    <version>1.2.9</version>
+    <version>1.3.0-SNAPSHOT</version>
     <name>AudioConnect</name>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>**/plugin.yml</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+                <excludes>
+                    <exclude>**/plugin.yml</exclude>
+                </excludes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
