--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,6 +5,7 @@ author: Weasel_Squeezer
 website: https://minecraftaudio.com
 
 depend: [DeadmanPlugin, WorldGuard]
+softdepend: [ProtocolLib]
 
 commands:
     ac:
